{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 11,
  "lineage": "618fae61-acca-0b32-1279-efb04dde0f88",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f701b563ecf3e5d4",
            "arn": "arn:aws:ec2:us-east-1:649496582050:elastic-ip/eipalloc-0f701b563ecf3e5d4",
            "domain": "vpc",
            "id": "eipalloc-0f701b563ecf3e5d4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-210-220-154.compute-1.amazonaws.com",
            "public_ip": "44.210.220.154",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nateip"
            },
            "tags_all": {
              "Name": "nateip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649496582050:internet-gateway/igw-089ea2b8ac3eacdf8",
            "id": "igw-089ea2b8ac3eacdf8",
            "owner_id": "649496582050",
            "tags": {
              "Name": "myigw"
            },
            "tags_all": {
              "Name": "myigw"
            },
            "vpc_id": "vpc-07a6745ed96347b6c"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mynat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f701b563ecf3e5d4",
            "association_id": "eipassoc-070474d30e2940527",
            "connectivity_type": "public",
            "id": "nat-02638b4aa36afe779",
            "network_interface_id": "eni-0171a0bb0db9956f8",
            "private_ip": "10.0.0.108",
            "public_ip": "44.210.220.154",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08391ddc824cabf70",
            "tags": {
              "Name": "mynatgw"
            },
            "tags_all": {
              "Name": "mynatgw"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.sub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649496582050:route-table/rtb-0e4afdef68898ece0",
            "id": "rtb-0e4afdef68898ece0",
            "owner_id": "649496582050",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-089ea2b8ac3eacdf8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pubRT"
            },
            "tags_all": {
              "Name": "pubRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a6745ed96347b6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvtRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649496582050:route-table/rtb-03284b385eed7d4b9",
            "id": "rtb-03284b385eed7d4b9",
            "owner_id": "649496582050",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02638b4aa36afe779",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pvtRT"
            },
            "tags_all": {
              "Name": "pvtRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a6745ed96347b6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.mynat",
            "aws_subnet.sub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mypubrta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c0c09085601f63a",
            "route_table_id": "rtb-0e4afdef68898ece0",
            "subnet_id": "subnet-08391ddc824cabf70"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pubRT",
            "aws_subnet.sub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mypvtrta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c2f0488a022b6a5",
            "route_table_id": "rtb-03284b385eed7d4b9",
            "subnet_id": "subnet-09ffa76d125b53474"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.mynat",
            "aws_route_table.pvtRT",
            "aws_subnet.sub1",
            "aws_subnet.sub2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649496582050:subnet/subnet-08391ddc824cabf70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08391ddc824cabf70",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "649496582050",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pubsub"
            },
            "tags_all": {
              "Name": "pubsub"
            },
            "vpc_id": "vpc-07a6745ed96347b6c"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649496582050:subnet/subnet-09ffa76d125b53474",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ffa76d125b53474",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "649496582050",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvtsub"
            },
            "tags_all": {
              "Name": "pvtsub"
            },
            "vpc_id": "vpc-07a6745ed96347b6c"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649496582050:vpc/vpc-07a6745ed96347b6c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-063f28791378ed62d",
            "default_route_table_id": "rtb-05af85f3e48aa5859",
            "default_security_group_id": "sg-05d37aa6b55ab9a6e",
            "dhcp_options_id": "dopt-07d7ed2fa1b762b69",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07a6745ed96347b6c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05af85f3e48aa5859",
            "owner_id": "649496582050",
            "tags": {
              "Name": "test"
            },
            "tags_all": {
              "Name": "test"
            }
          }
        }
      ]
    }
  ]
}